--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ repositories {
 
 dependencies {
     implementation 'com.furhatrobotics.furhatos:furhat-commons:2.9.0'
+    implementation "io.ktor:ktor-client-apache:2.3.1"
+    implementation 'org.json:json:20231013'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
 }
 
 jar {
